fix(ui): ensure overflow scrolling works correctly

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,10 +61,16 @@
 }
 
 @layer base {
-  html,
+  html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
   body,
   #app {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
